--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -6,4 +6,13 @@ edition = "2023_11"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
+starknet = ">=2.6.3"
 alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
+
+[dev-dependencies]
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.25.0" }
+
+[scripts]
+test = "snforge test"
+
+[[target.starknet-contract]]
