--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -7,7 +7,7 @@ edition = "2023_11"
 
 [dependencies]
 starknet = ">=2.6.3"
-alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
+alexandria_merkle_tree = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.25.0" }
