--- a/contracts/snfoundry.toml
+++ b/contracts/snfoundry.toml
@@ -1,4 +1,5 @@
-[sncast.myprofile]
-account = "user"
-accounts-file = "~/my_accounts.json"
-url = "http://127.0.0.1:5050/rpc"
+
+[sncast.local]
+account = "local"
+accounts-file = "~/.starknet_accounts/starknet_open_zeppelin_accounts.json"
+url = "http://127.0.0.1:5050"
