--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -8,11 +8,14 @@ edition = "2023_11"
 [dependencies]
 starknet = ">=2.6.3"
 alexandria_merkle_tree = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.13.0" }
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.25.0" }
+
 
 [scripts]
 test = "snforge test"
 
 [[target.starknet-contract]]
+build-external-contracts = ["openzeppelin::token::erc20::erc20::ERC20"]
