--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -13,9 +13,13 @@ openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", ta
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.25.0" }
 
-
 [scripts]
 test = "snforge test"
 
 [[target.starknet-contract]]
 build-external-contracts = ["openzeppelin::token::erc20::erc20::ERC20"]
+casm = true
+
+[tool.fmt]
+sort-module-level-items = true
+max-line-length = 120
