--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -17,8 +17,8 @@ snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag 
 test = "snforge test"
 
 [[target.starknet-contract]]
-build-external-contracts = ["openzeppelin::token::erc20::erc20::ERC20"]
 casm = true
+sierra = true
 
 [tool.fmt]
 sort-module-level-items = true
